--- a/env.yml
+++ b/env.yml
@@ -8,7 +8,6 @@ dependencies:
   - patchelf
   - pip:
     - absl-py==1.4.0
-    - git+https://github.com/rail-berkeley/d4rl@master#egg=d4rl
     - argcomplete==2.0.0
     - argparse==1.4.0
     - asttokens==2.2.1
@@ -56,7 +55,6 @@ dependencies:
     - markdown==3.4.1
     - markupsafe==2.1.2
     - matplotlib==3.6.3
-    - mjrl==1.0.0
     - mujoco==2.3.1.post1
     - mujoco-py==2.1.2.14
     - mypy-extensions==0.4.3
@@ -100,10 +98,11 @@ dependencies:
     - tensorboard-plugin-wit==1.8.1
     - termcolor==2.2.0
     - tifffile==2022.10.10
-    - tokenizers==0.10.0
+    - tokenizers
     - torch==1.13.1
     - tqdm==4.64.1
     - transformers==4.5.1
+    - packaging==21.3
     - typed-argument-parser==1.7.2
     - typing==3.7.4.3
     - typing-extensions==4.4.0
